--- a/front/index.html
+++ b/front/index.html
@@ -54,7 +54,7 @@
     <header class="masthead bg-info text-white text-center">
       <div class="container d-flex align-items-center flex-column">
         <!--Masthead Avatar Image-->
-        <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="..." />
+        <img class="masthead-avatar mb-5" src="assets/img/cat.svg" alt="..." />
         <!--Masthead Heading-->
         <h1 class="masthead-heading text-uppercase mb-0">Ahmad Ramadhani</h1>
         <!-- Icon Divider-->
