penambahan latihan upload gambar

--- a/back/index.html
+++ b/back/index.html
@@ -17,9 +17,9 @@
         </div>
         <div class="card-body">
           <!-- table-stripted untuk membuat latar dengan tabel dengan model belang -->
-          <table class="w-100 text-center">
+          <table class="w-100 text-center table table-striped">
             <thead>
-              <tr class="bg-dark text-white">
+              <tr class="table-dark text-capitalize text-white">
                 <th>No</th>
                 <th>nama depan</th>
                 <th>nama belakang</th>
